# resume-match-api

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  create_cover_letter_table.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_ats_checker_manual.py  test_cover_letter.py  test_keyword_analyzer_manual.py  test_r2_connection.py  test_user_settings.py
.github/workflows/: ci.yml  code-quality.yml
alembic/: env.py
alembic/versions/: 002879a20a52_add_performance_indexes.py  0e9a78b9950f_add_tags_to_cover_letters.py  2205ae9aaea9_add_cover_letter_templates_table.py  226b0b0920f1_add_file_hash_to_resumes.py  67c6976fe9c3_initial_migration_user_model.py  78cc40ddbbaa_make_user_id_resume_id_nullable_for_.py  814393ea27ff_add_r2_storage_columns_to_resumes_table.py  923d3c7bb4d1_add_resume_and_analysis_models.py  950fb2789d0d_add_openai_tokens_used_field_to_resume_.py  bbd6352d2485_add_subscription_fields_to_users.py
app/: config.py  database.py  dependencies.py  main.py
app/constants/: cover_letter_tags.py
app/middleware/: timing.py
app/models/: __init__.py  cover_letter.py  cover_letter_template.py  resume.py  resume_analysis.py  user.py
app/routers/: analysis.py  auth.py  cover_letter.py  health.py  (+4 more)
docs/: R2_STORAGE_SETUP.md
scripts/: docker-entrypoint.sh  sample_data.py  test_ai_manual.py  test_analysis_manual.py  test_hybrid_workflow.py
tests/: conftest.py  test_analysis.py  test_ats_checker.py  test_auth.py  test_file_handler.py  test_health.py  test_keyword_analyzer.py  test_models.py  test_resume.py  test_resume_parser.py  test_storage_service.py
(+28 files in other folders)
